阶段性的成果

--- a/MillionHeroAssistant/config.yaml
+++ b/MillionHeroAssistant/config.yaml
@@ -35,6 +35,11 @@ crop_areas:
       - 0.186
       - 0.926
       - 0.683
+    "丁丁当":
+      - 0.081
+      - 0.151
+      - 0.919
+      - 0.613
     "自适应": false
 
 ### baidu orc
